--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                 </h2>
                 <p class="text-sm md:text-lg text-gray-600 mt-4 leading-relaxed">
                 <ul>
-                    <li class="m-5">✔ Personalized Solutions - We understand that every business is unique. Our services are tailored to fit your specific
+                    <li class="m-5 text-sm md:text-lg text-gray-600">✔ Personalized Solutions - We understand that every business is unique. Our services are tailored to fit your specific
                     needs and goals.​</li>
-                    <li class="m-5">✔ Experienced Professionals - Our team comprises skilled bookkeepers with extensive experience across various industries.​</li>
-                    <li class="m-5">✔ Advanced Technology - We leverage the latest accounting software to provide efficient and accurate services.​</li>
-                    <li class="m-5">✔ Confidentiality & Security: Your financial data is handled with the utmost confidentiality and protected using robust
+                    <li class="m-5 text-sm md:text-lg text-gray-600">✔ Experienced Professionals - Our team comprises skilled bookkeepers with extensive experience across various industries.​</li>
+                    <li class="m-5 text-sm md:text-lg text-gray-600">✔ Advanced Technology - We leverage the latest accounting software to provide efficient and accurate services.​</li>
+                    <li class="m-5 text-sm md:text-lg text-gray-600">✔ Confidentiality & Security: Your financial data is handled with the utmost confidentiality and protected using robust
                     security measures.</li>
                 </ul>
                 </p>
