--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -45,13 +45,10 @@
                         <select name="services" id="services-select" required class="border-2 border-gray-300 p-3 rounded-md w-full hover:bg-gray-200 cursor-pointer">
                             <option value="">Select Service</option>
                             <option value="Default">Streamlined Bookkeeping</option>
-                            <option value="Default">Expert Tax Preparation</option>
-                            <option value="Default">Dedicated Financial Consulting</option>
-                            <option value="Default">Efficient Payroll Management</option>
-                            <option value="">Financial Reporting & Analysis</option>
-                            <option value="">Auditing & Assurance Services</option>
-                            <option value="">Compliance & Regulatory Services</option>
-
+                            <option value="Default">Financial Reporting & Analysis</option>
+                            <option value="Default">Tax Preparation & Compliance</option>
+                            <option value="Default">Accounts Payable & Receivable</option>
+                            <option value="">Bank Reconciliation</option>
                         </select>
                         <textarea name="desciption" id="Desciption" placeholder="Write a Decription..." class="border-2 h-32 p-2"></textarea>
                         <button type="submit" class="bg-teal-500 text-xl text-white p-3 rounded-xl hover:bg-teal-600 w-full">Submit</button>
