--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -94,7 +94,7 @@
                                 class="border-2 border-gray-300 p-3 rounded-md w-1/3 text-sm overflow-visible">
                                 <option value="not provided" selected>Select Country Code</option>
                                 <option value="+1">+1 (USA)</option>
-                                <option value="+91" selected>+91 (India)</option>
+                                <option value="+91">+91 (India)</option>
                                 <option value="+44">+44 (UK)</option>
                                 <option value="+61">+61 (Australia)</option>
                                 <option value="+81">+81 (Japan)</option>
