--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -24,13 +24,18 @@
 
         document.addEventListener("DOMContentLoaded", function () {
             const contactForm = document.querySelector("form");
+            const phoneInput = document.querySelector('#phone');
+
+            phoneInput.addEventListener('input', function () {
+                this.value = this.value.replace(/[^0-9]/g, '');
+            });
 
             contactForm.addEventListener("submit", async function (event) {
                 event.preventDefault();
 
                 const name = document.querySelector('input[placeholder="Name"]').value;
                 const countryCode = document.querySelector('#country-code').value;
-                const phone = document.querySelector('#phone').value;
+                const phone = phoneInput.value;
                 const email = document.querySelector('input[placeholder="Email"]').value;
                 const businessName = document.querySelector('input[placeholder="Business Name"]').value;
                 const service = document.querySelector("#services-select").value;
@@ -92,7 +97,7 @@
                         <div class="flex space-x-2">
                             <select id="country-code" name="countryCode"
                                 class="border-2 border-gray-300 p-3 rounded-md w-1/3 text-sm overflow-visible">
-                                <option value="not provided" selected>Select Country Code</option>
+                                <option value="not available" selected>Select Contry Code</option>
                                 <option value="+1">+1 (USA)</option>
                                 <option value="+91">+91 (India)</option>
                                 <option value="+44">+44 (UK)</option>
