--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -23,45 +23,62 @@
         const db = getDatabase(app);
 
         document.addEventListener("DOMContentLoaded", function () {
-            const contactForm = document.querySelector("form");
-            const phoneInput = document.querySelector('#phone');
+                const contactForm = document.querySelector("form");
+                const phoneInput = document.querySelector('#phone');
 
-            phoneInput.addEventListener('input', function () {
-                this.value = this.value.replace(/[^0-9]/g, '');
+                // Create success message div
+                const successMessage = document.createElement("div");
+                successMessage.className = "hidden text-green-600 font-semibold text-center p-2 bg-green-100 border border-green-400 rounded-md mt-2 transition-all duration-500";
+
+                // Insert after the textarea
+                const textarea = document.querySelector("#Desciption");
+                textarea.parentNode.insertBefore(successMessage, textarea.nextSibling);
+
+                phoneInput.addEventListener('input', function () {
+                    this.value = this.value.replace(/[^0-9]/g, '');
+                });
+
+                contactForm.addEventListener("submit", async function (event) {
+                    event.preventDefault();
+
+                    const name = document.querySelector('input[placeholder="Name"]').value;
+                    const countryCode = document.querySelector('#country-code').value;
+                    const phone = phoneInput.value;
+                    const email = document.querySelector('input[placeholder="Email"]').value;
+                    const businessName = document.querySelector('input[placeholder="Business Name"]').value;
+                    const service = document.querySelector("#services-select").value;
+                    const description = document.querySelector("#Desciption").value;
+
+                    try {
+                        const contactRef = ref(db, "contactRequests");
+                        await push(contactRef, {
+                            name,
+                            countryCode,
+                            phone,
+                            email,
+                            businessName,
+                            service,
+                            description,
+                            timestamp: new Date().toISOString()
+                        });
+
+                        // Show success message
+                        successMessage.textContent = "✅ Thank you! A member of our team will get back to you promptly.";
+                        successMessage.classList.remove("hidden");
+
+                        // Hide message after 5 seconds
+                        setTimeout(() => {
+                            successMessage.classList.add("hidden");
+                        }, 5000);
+
+                        contactForm.reset();
+                    } catch (error) {
+                        console.error("Error submitting form: ", error);
+                        successMessage.textContent = "❌ Failed to submit form. we are facing some technical issues. try again after few minutes";
+                        successMessage.className = "text-red-600 font-semibold text-center p-2 bg-red-100 border border-red-400 rounded-md mt-2 transition-all duration-500";
+                    }
+                });
             });
-
-            contactForm.addEventListener("submit", async function (event) {
-                event.preventDefault();
-
-                const name = document.querySelector('input[placeholder="Name"]').value;
-                const countryCode = document.querySelector('#country-code').value;
-                const phone = phoneInput.value;
-                const email = document.querySelector('input[placeholder="Email"]').value;
-                const businessName = document.querySelector('input[placeholder="Business Name"]').value;
-                const service = document.querySelector("#services-select").value;
-                const description = document.querySelector("#Desciption").value;
-
-                try {
-                    const contactRef = ref(db, "contactRequests");
-                    await push(contactRef, {
-                        name,
-                        countryCode,
-                        phone,
-                        email,
-                        businessName,
-                        service,
-                        description,
-                        timestamp: new Date().toISOString()
-                    });
-
-                    alert("Form submitted successfully!");
-                    contactForm.reset();
-                } catch (error) {
-                    console.error("Error submitting form: ", error);
-                    alert("Failed to submit form.");
-                }
-            });
-        });
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
