--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -168,8 +168,7 @@
             <div class="brand-footer">
                 <h1 class="text-xl font-bold mb-3">Pocket Accts.</h1>
                 <p class="text-gray-400 text-sm">
-                    Dedicated to providing professional virtual accounting services, ensuring financial clarity for every
-                    client.
+                    Streamline your financial management with professional bookkeeping, tax preparation, and Bank Reconciliation.
                 </p>
             </div>
     
@@ -188,10 +187,11 @@
             <div class="services-footer">
                 <h1 class="text-lg font-semibold mb-3">Our Services</h1>
                 <ul class="space-y-2">
-                    <li class="text-gray-400">Bookkeeping</li>
-                    <li class="text-gray-400">Tax Preparation</li>
-                    <li class="text-gray-400">Financial Consulting</li>
-                    <li class="text-gray-400">Payroll Services</li>
+                    <li class="text-gray-400">Streamlined Bookkeeping</li>
+                    <li class="text-gray-400">Financial Reporting & Analysis</li>
+                    <li class="text-gray-400">Tax Preparation & Compliance</li>
+                    <li class="text-gray-400">Accounts Payable & Receivable</li>
+                    <li class="text-gray-400">Bank Reconciliation</li>
                 </ul>
             </div>
         </div>
