--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="text-xl md:text-2xl mt-5">
                 <h1>Streamline your financial management</h1>
                 <h1>with professional bookkeeping, tax preparation,</h1>
-                <h1>and payroll solutions.</h1>
+                <h1>and Bank Reconciliation</h1>
             </div>
             <div class="hero-buttons mt-10">
                 <a href="./src/contact-us.html"><button
@@ -220,9 +220,7 @@
             <div class="brand-footer">
                 <h1 class="text-xl font-bold mb-3">Pocket Accts.</h1>
                 <p class="text-gray-400 text-sm">
-                    Dedicated to providing professional virtual accounting services, ensuring financial clarity for
-                    every
-                    client.
+                    Streamline your financial management with professional bookkeeping, tax preparation, and Bank Reconciliation.
                 </p>
             </div>
 
